Fix dropwdown menus hidden by menubar overflow

--- a/src/styles/menubar.css
+++ b/src/styles/menubar.css
@@ -13,7 +13,6 @@
   -webkit-app-region: no-drag;
   position: relative;
   z-index: 500;
-  overflow: hidden;
 }
 
 .menu-item {
